{
    "name": "MouseInputs",
    "maps": [
        {
            "name": "Default",
            "id": "1874d768-0597-4ffe-9f98-01b1a8925f04",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "5542005e-7a64-4294-af5b-1b52fc93e791",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "3a175d6f-ff6a-4b22-89d4-9e1cf6def995",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "58c8e6bb-897e-4274-9052-ba79f954c9d4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ca03025-d476-447d-a49f-078e2037b6e9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "671c5961-1701-4232-9bb6-2e7d8d5581c0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "219d8670-bf43-4bb7-ac81-35e6bd709106",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}